# setwallpaper

./: Cargo.toml  README.md
src/: commands.toml  lib.rs  unix.rs  windows.rs
